// cmd/test-player/main.go
// æµ‹è¯•ç©å®¶åˆ›å»ºå’Œæ¸¸æˆæµç¨‹éªŒè¯å·¥å…·

package main

import (
	"bytes"
	"context"
	"encoding/json"
	"flag"
	"fmt"
	"io"
	"log"
	"net/http"
	"net/url"
	"os"
	"os/signal"
	"time"

	"github.com/gorilla/websocket"
	"google.golang.org/protobuf/proto"

	pb "fish_server/api/proto/v1"
)

const (
	defaultAdminURL = "http://localhost:6060"
	defaultGameURL  = "ws://localhost:9090"
)

var (
	adminURL   = flag.String("admin", defaultAdminURL, "Admin server URL")
	gameURL    = flag.String("game", defaultGameURL, "Game server WebSocket URL")
	username   = flag.String("username", "", "Username for test player (required)")
	password   = flag.String("password", "test123456", "Password for test player")
	createOnly = flag.Bool("create-only", false, "Only create player without testing game flow")
	verbose    = flag.Bool("verbose", false, "Enable verbose logging")
)

type TestPlayer struct {
	Username string
	Password string
	Token    string
	UserID   int64
	Nickname string
}

type RegisterRequest struct {
	Username string `json:"username"`
	Password string `json:"password"`
}

type LoginRequest struct {
	Username string `json:"username"`
	Password string `json:"password"`
}

type AuthResponse struct {
	Token string `json:"token"`
	User  User   `json:"user"`
}

type User struct {
	ID        int64  `json:"id"`
	Username  string `json:"username"`
	Nickname  string `json:"nickname"`
	AvatarURL string `json:"avatar_url"`
	IsGuest   bool   `json:"is_guest"`
}

type ErrorResponse struct {
	Error string `json:"error"`
}

func main() {
	flag.Parse()

	if *username == "" {
		fmt.Println("é”™è¯¯: å¿…é¡»æä¾›ç”¨æˆ·å")
		fmt.Println("ä½¿ç”¨æ–¹å¼: go run main.go -username <ç”¨æˆ·å> [-password <å¯†ç >]")
		flag.PrintDefaults()
		os.Exit(1)
	}

	player := &TestPlayer{
		Username: *username,
		Password: *password,
	}

	fmt.Println("ğŸŸ é±¼æ¸¸æˆæµ‹è¯•å·¥å…·")
	fmt.Println("==================")
	fmt.Printf("Admin Server: %s\n", *adminURL)
	fmt.Printf("Game Server:  %s\n", *gameURL)
	fmt.Printf("æµ‹è¯•ç”¨æˆ·:     %s\n", player.Username)
	fmt.Println()

	// æ­¥éª¤1: åˆ›å»º/æ³¨å†Œç©å®¶
	if err := registerPlayer(player); err != nil {
		log.Printf("âŒ æ³¨å†Œå¤±è´¥ï¼ˆå¯èƒ½å·²å­˜åœ¨ï¼‰: %v", err)
		log.Println("å°è¯•ç›´æ¥ç™»å…¥...")
	} else {
		fmt.Printf("âœ… ç©å®¶æ³¨å†ŒæˆåŠŸ: %s\n", player.Username)
	}

	// æ­¥éª¤2: ç™»å…¥
	if err := loginPlayer(player); err != nil {
		log.Fatalf("âŒ ç™»å…¥å¤±è´¥: %v", err)
	}
	fmt.Printf("âœ… ç™»å…¥æˆåŠŸ\n")
	fmt.Printf("   Token: %s...\n", player.Token[:50])
	fmt.Printf("   ç”¨æˆ·ID: %d\n", player.UserID)
	fmt.Printf("   æ˜µç§°: %s\n", player.Nickname)
	fmt.Println()

	// æ­¥éª¤3: è·å–ç©å®¶ä¿¡æ¯
	if err := getPlayerProfile(player); err != nil {
		log.Printf("âš ï¸  è·å–ç©å®¶èµ„æ–™å¤±è´¥: %v", err)
	} else {
		fmt.Println("âœ… ç©å®¶èµ„æ–™éªŒè¯æˆåŠŸ")
	}
	fmt.Println()

	if *createOnly {
		fmt.Println("âœ… æµ‹è¯•ç©å®¶åˆ›å»ºå®Œæˆï¼ˆä»…åˆ›å»ºæ¨¡å¼ï¼‰")
		return
	}

	// æ­¥éª¤4: è¿æ¥åˆ°æ¸¸æˆæœåŠ¡å™¨
	fmt.Println("ğŸ“¡ è¿æ¥åˆ°æ¸¸æˆæœåŠ¡å™¨...")
	if err := testGameFlow(player); err != nil {
		log.Fatalf("âŒ æ¸¸æˆæµç¨‹æµ‹è¯•å¤±è´¥: %v", err)
	}

	fmt.Println()
	fmt.Println("ğŸ‰ æ‰€æœ‰æµ‹è¯•é€šè¿‡ï¼")
}

// registerPlayer æ³¨å†Œæ–°ç©å®¶
func registerPlayer(player *TestPlayer) error {
	reqBody := RegisterRequest{
		Username: player.Username,
		Password: player.Password,
	}

	jsonData, err := json.Marshal(reqBody)
	if err != nil {
		return fmt.Errorf("åºåˆ—åŒ–è¯·æ±‚å¤±è´¥: %w", err)
	}

	url := fmt.Sprintf("%s/api/v1/auth/register", *adminURL)
	resp, err := http.Post(url, "application/json", bytes.NewBuffer(jsonData))
	if err != nil {
		return fmt.Errorf("HTTPè¯·æ±‚å¤±è´¥: %w", err)
	}
	defer resp.Body.Close()

	body, _ := io.ReadAll(resp.Body)

	if resp.StatusCode != http.StatusOK && resp.StatusCode != http.StatusCreated {
		var errResp ErrorResponse
		if err := json.Unmarshal(body, &errResp); err == nil {
			return fmt.Errorf("æ³¨å†Œå¤±è´¥ [%d]: %s", resp.StatusCode, errResp.Error)
		}
		return fmt.Errorf("æ³¨å†Œå¤±è´¥ [%d]: %s", resp.StatusCode, string(body))
	}

	var authResp AuthResponse
	if err := json.Unmarshal(body, &authResp); err != nil {
		return fmt.Errorf("è§£æå“åº”å¤±è´¥: %w", err)
	}

	player.Token = authResp.Token
	player.UserID = authResp.User.ID
	player.Nickname = authResp.User.Nickname

	return nil
}

// loginPlayer ç™»å…¥ç©å®¶
func loginPlayer(player *TestPlayer) error {
	reqBody := LoginRequest{
		Username: player.Username,
		Password: player.Password,
	}

	jsonData, err := json.Marshal(reqBody)
	if err != nil {
		return fmt.Errorf("åºåˆ—åŒ–è¯·æ±‚å¤±è´¥: %w", err)
	}

	url := fmt.Sprintf("%s/api/v1/auth/login", *adminURL)
	resp, err := http.Post(url, "application/json", bytes.NewBuffer(jsonData))
	if err != nil {
		return fmt.Errorf("HTTPè¯·æ±‚å¤±è´¥: %w", err)
	}
	defer resp.Body.Close()

	body, _ := io.ReadAll(resp.Body)

	if resp.StatusCode != http.StatusOK {
		var errResp ErrorResponse
		if err := json.Unmarshal(body, &errResp); err == nil {
			return fmt.Errorf("ç™»å…¥å¤±è´¥ [%d]: %s", resp.StatusCode, errResp.Error)
		}
		return fmt.Errorf("ç™»å…¥å¤±è´¥ [%d]: %s", resp.StatusCode, string(body))
	}

	var authResp AuthResponse
	if err := json.Unmarshal(body, &authResp); err != nil {
		return fmt.Errorf("è§£æå“åº”å¤±è´¥: %w", err)
	}

	player.Token = authResp.Token
	player.UserID = authResp.User.ID
	player.Nickname = authResp.User.Nickname

	return nil
}

// getPlayerProfile è·å–ç©å®¶èµ„æ–™
func getPlayerProfile(player *TestPlayer) error {
	url := fmt.Sprintf("%s/api/v1/user/profile", *adminURL)
	req, err := http.NewRequest("GET", url, nil)
	if err != nil {
		return fmt.Errorf("åˆ›å»ºè¯·æ±‚å¤±è´¥: %w", err)
	}

	req.Header.Set("Authorization", "Bearer "+player.Token)

	client := &http.Client{}
	resp, err := client.Do(req)
	if err != nil {
		return fmt.Errorf("HTTPè¯·æ±‚å¤±è´¥: %w", err)
	}
	defer resp.Body.Close()

	if resp.StatusCode != http.StatusOK {
		body, _ := io.ReadAll(resp.Body)
		return fmt.Errorf("è·å–èµ„æ–™å¤±è´¥ [%d]: %s", resp.StatusCode, string(body))
	}

	var user User
	if err := json.NewDecoder(resp.Body).Decode(&user); err != nil {
		return fmt.Errorf("è§£æå“åº”å¤±è´¥: %w", err)
	}

	if *verbose {
		fmt.Printf("   ID: %d\n", user.ID)
		fmt.Printf("   ç”¨æˆ·å: %s\n", user.Username)
		fmt.Printf("   æ˜µç§°: %s\n", user.Nickname)
		fmt.Printf("   å¤´åƒ: %s\n", user.AvatarURL)
		fmt.Printf("   æ¸¸å®¢: %v\n", user.IsGuest)
	}

	return nil
}

// testGameFlow æµ‹è¯•æ¸¸æˆæµç¨‹
func testGameFlow(player *TestPlayer) error {
	// æ„å»ºWebSocket URLï¼ŒåŒ…å«tokenä½œä¸ºæŸ¥è¯¢å‚æ•°
	u, err := url.Parse(*gameURL)
	if err != nil {
		return fmt.Errorf("è§£ææ¸¸æˆæœåŠ¡å™¨URLå¤±è´¥: %w", err)
	}

	// æ·»åŠ tokenåˆ°æŸ¥è¯¢å‚æ•°
	q := u.Query()
	q.Set("token", player.Token)
	u.RawQuery = q.Encode()

	// è¿æ¥WebSocket
	fmt.Printf("è¿æ¥åˆ°: %s\n", u.String())
	ws, _, err := websocket.DefaultDialer.Dial(u.String(), nil)
	if err != nil {
		return fmt.Errorf("WebSocketè¿æ¥å¤±è´¥: %w", err)
	}
	defer ws.Close()

	fmt.Println("âœ… WebSocketè¿æ¥æˆåŠŸ")

	// åˆ›å»ºcontextç”¨äºä¼˜é›…å…³é—­
	ctx, cancel := context.WithCancel(context.Background())
	defer cancel()

	// å¤„ç†ä¸­æ–­ä¿¡å·
	interrupt := make(chan os.Signal, 1)
	signal.Notify(interrupt, os.Interrupt)

	// æ¶ˆæ¯æ¥æ”¶é€šé“
	done := make(chan struct{})
	messages := make(chan *pb.GameMessage, 10)

	// å¯åŠ¨æ¶ˆæ¯æ¥æ”¶goroutine
	go func() {
		defer close(done)
		for {
			_, data, err := ws.ReadMessage()
			if err != nil {
				if *verbose {
					log.Printf("è¯»å–æ¶ˆæ¯é”™è¯¯: %v", err)
				}
				return
			}

			var msg pb.GameMessage
			if err := proto.Unmarshal(data, &msg); err != nil {
				log.Printf("è§£ææ¶ˆæ¯å¤±è´¥: %v", err)
				continue
			}

			messages <- &msg
		}
	}()

	// æµ‹è¯•æµç¨‹
	testSteps := []struct {
		name string
		fn   func() error
	}{
		{"ç­‰å¾…æ¬¢è¿æ¶ˆæ¯", func() error { return waitForWelcome(messages) }},
		{"è·å–æˆ¿é—´åˆ—è¡¨", func() error { return getRoomList(ws, messages) }},
		{"å‘é€å¿ƒè·³", func() error { return sendHeartbeat(ws, messages) }},
		{"è·å–ç©å®¶ä¿¡æ¯", func() error { return getPlayerInfo(ws, messages) }},
	}

	for _, step := range testSteps {
		fmt.Printf("ğŸ“‹ %s...\n", step.name)
		if err := step.fn(); err != nil {
			return fmt.Errorf("%så¤±è´¥: %w", step.name, err)
		}
		fmt.Printf("   âœ… %sæˆåŠŸ\n", step.name)
		time.Sleep(500 * time.Millisecond)
	}

	// ç­‰å¾…ä¸€æ®µæ—¶é—´æˆ–ä¸­æ–­
	select {
	case <-done:
		fmt.Println("è¿æ¥å·²å…³é—­")
	case <-interrupt:
		fmt.Println("\næ”¶åˆ°ä¸­æ–­ä¿¡å·ï¼Œæ­£åœ¨å…³é—­...")
		cancel()
	case <-time.After(2 * time.Second):
		fmt.Println("æµ‹è¯•å®Œæˆ")
	}

	return nil
}

// waitForWelcome ç­‰å¾…æ¬¢è¿æ¶ˆæ¯
func waitForWelcome(messages <-chan *pb.GameMessage) error {
	select {
	case msg := <-messages:
		if msg.Type == pb.MessageType_WELCOME {
			if *verbose {
				fmt.Printf("   æ”¶åˆ°æ¬¢è¿æ¶ˆæ¯: %s\n", msg.GetWelcome().GetMessage())
			}
			return nil
		}
		return fmt.Errorf("æœŸæœ›WELCOMEæ¶ˆæ¯ï¼Œæ”¶åˆ°: %s", msg.Type.String())
	case <-time.After(5 * time.Second):
		return fmt.Errorf("ç­‰å¾…æ¬¢è¿æ¶ˆæ¯è¶…æ—¶")
	}
}

// getRoomList è·å–æˆ¿é—´åˆ—è¡¨
func getRoomList(ws *websocket.Conn, messages <-chan *pb.GameMessage) error {
	msg := &pb.GameMessage{
		Type:        pb.MessageType_GET_ROOM_LIST,
		GetRoomList: &pb.GetRoomListRequest{},
	}

	data, err := proto.Marshal(msg)
	if err != nil {
		return fmt.Errorf("åºåˆ—åŒ–æ¶ˆæ¯å¤±è´¥: %w", err)
	}

	if err := ws.WriteMessage(websocket.BinaryMessage, data); err != nil {
		return fmt.Errorf("å‘é€æ¶ˆæ¯å¤±è´¥: %w", err)
	}

	// ç­‰å¾…å“åº”
	select {
	case resp := <-messages:
		if resp.Type == pb.MessageType_GET_ROOM_LIST_RESPONSE {
			rooms := resp.GetGetRoomListResponse().GetRooms()
			if *verbose {
				fmt.Printf("   æˆ¿é—´æ•°é‡: %d\n", len(rooms))
				for i, room := range rooms {
					fmt.Printf("   æˆ¿é—´%d: ID=%d, ç©å®¶=%d/%d, çŠ¶æ€=%s\n",
						i+1, room.GetId(), room.GetCurrentPlayers(), room.GetMaxPlayers(), room.GetStatus())
				}
			}
			return nil
		}
		return fmt.Errorf("æœŸæœ›GET_ROOM_LIST_RESPONSEï¼Œæ”¶åˆ°: %s", resp.Type.String())
	case <-time.After(5 * time.Second):
		return fmt.Errorf("ç­‰å¾…æˆ¿é—´åˆ—è¡¨å“åº”è¶…æ—¶")
	}
}

// sendHeartbeat å‘é€å¿ƒè·³
func sendHeartbeat(ws *websocket.Conn, messages <-chan *pb.GameMessage) error {
	msg := &pb.GameMessage{
		Type:      pb.MessageType_HEARTBEAT,
		Heartbeat: &pb.HeartbeatRequest{},
	}

	data, err := proto.Marshal(msg)
	if err != nil {
		return fmt.Errorf("åºåˆ—åŒ–æ¶ˆæ¯å¤±è´¥: %w", err)
	}

	if err := ws.WriteMessage(websocket.BinaryMessage, data); err != nil {
		return fmt.Errorf("å‘é€æ¶ˆæ¯å¤±è´¥: %w", err)
	}

	// ç­‰å¾…å“åº”
	select {
	case resp := <-messages:
		if resp.Type == pb.MessageType_HEARTBEAT_RESPONSE {
			if *verbose {
				fmt.Printf("   æœåŠ¡å™¨æ—¶é—´: %d\n", resp.GetHeartbeatResponse().GetServerTime())
			}
			return nil
		}
		return fmt.Errorf("æœŸæœ›HEARTBEAT_RESPONSEï¼Œæ”¶åˆ°: %s", resp.Type.String())
	case <-time.After(5 * time.Second):
		return fmt.Errorf("ç­‰å¾…å¿ƒè·³å“åº”è¶…æ—¶")
	}
}

// getPlayerInfo è·å–ç©å®¶ä¿¡æ¯
func getPlayerInfo(ws *websocket.Conn, messages <-chan *pb.GameMessage) error {
	msg := &pb.GameMessage{
		Type:          pb.MessageType_GET_PLAYER_INFO,
		GetPlayerInfo: &pb.GetPlayerInfoRequest{},
	}

	data, err := proto.Marshal(msg)
	if err != nil {
		return fmt.Errorf("åºåˆ—åŒ–æ¶ˆæ¯å¤±è´¥: %w", err)
	}

	if err := ws.WriteMessage(websocket.BinaryMessage, data); err != nil {
		return fmt.Errorf("å‘é€æ¶ˆæ¯å¤±è´¥: %w", err)
	}

	// ç­‰å¾…å“åº”
	select {
	case resp := <-messages:
		if resp.Type == pb.MessageType_GET_PLAYER_INFO_RESPONSE {
			playerResp := resp.GetGetPlayerInfoResponse()
			if *verbose {
				fmt.Printf("   ç©å®¶ID: %d\n", playerResp.GetPlayerId())
				fmt.Printf("   ç”¨æˆ·å: %s\n", playerResp.GetUsername())
				fmt.Printf("   ä½™é¢: %d\n", playerResp.GetBalance())
			}
			return nil
		}
		return fmt.Errorf("æœŸæœ›GET_PLAYER_INFO_RESPONSEï¼Œæ”¶åˆ°: %s", resp.Type.String())
	case <-time.After(5 * time.Second):
		return fmt.Errorf("ç­‰å¾…ç©å®¶ä¿¡æ¯å“åº”è¶…æ—¶")
	}
}
